methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:35: error: illegal start of simple pattern
  for(<-1 to 5) {
      ^MethodsPicture:38: error: '<-' expected but '}' found.
  }}
   ^